# RecruitingAgent

./: .env.example  .gitignore  Readme.md  Spec.md  app.py  evaluation_governance_report.md  evaluation_output_report.md  evaluation_run_report.md  evaluation_security_report.md  evaluation_summary.md  pyproject.toml  requirements.txt
agent/: __init__.py  graph.py  nodes.py  state.py
agent/prompts/: __init__.py  base.py  candidate_scoring.py  decision.py  fairness_check.py  prompt_injection.py  resume_parsing.py  shortlist.py  system.py
data/job_descriptions/: .gitkeep  junior_ai_engineer.txt  senior_ml_engineer.txt
evaluation/: __init__.py
evaluation/dataset/: __init__.py  _tasks_1_5.json  dataset.py  sample_tasks.json  task_schema.py  tasks.py
evaluation/governance/: __init__.py  human_gate.py
evaluation/output/: __init__.py  fairness.py  output_evaluator.py
evaluation/security/: __init__.py  redteam.py
evaluation/trace/: __init__.py  report.py  tool_evaluator.py  trace_evaluator.py
models/: __init__.py  candidate.py  decision.py  interview.py  job_description.py  rubric.py  scorecard.py  trajectory.py
pages_backup/: 1_upload.py  2_run_agent.py  3_shortlist.py  4_audit_log.py
tests/: test_evaluation.py  test_graph.py  test_prompts.py  test_tools_smoke.py
tools/: __init__.py  check_availability.py  config.py  parse_resume.py  propose_interview.py  score_candidate.py
